--- a/css/main.css
+++ b/css/main.css
@@ -126,8 +126,6 @@ hr {
 
 .content-top img {
 	padding-top: 30px;
-	max-width: 90%;
-	height: auto;
 }
 
 .content-middle {
@@ -163,11 +161,21 @@ hr {
 .standing-holder {
 	display: flex;
 	justify-content: center;
-	align-items: top;
+	align-items: flex-start;
 }
 
 .standing-inner {
 	margin:  2px 2px 0 0;
 	padding:  5px;
 	border:  1px solid #000;
+}
+
+/* Rules */
+.rules .rules-holder {
+	display: flex;
+	justify-content: center;
+	align-items: flex-start;
+	margin-left: auto;
+	margin-right: auto;
+	max-width: 60%;
 }
