--- a/css/main.css
+++ b/css/main.css
@@ -179,3 +179,41 @@ hr {
 	margin-right: auto;
 	max-width: 60%;
 }
+
+/* Responsive */
+@media (max-width: 768px) {
+	h1 {
+		font-size: 42px;
+	}
+
+	h3 {
+		font-size: 32px;
+	}
+
+	h4 {
+		font-size: 28px;
+	}
+
+	p {
+		font-size: 16px
+	}
+
+	a {
+		font-size: 16px;
+	}
+
+	.content-top {
+	    max-width: 100%;
+	    margin-left: 15px;
+	    margin-right: 15px;
+	    padding-top: 20px;
+	    padding-bottom: 20px;
+	    text-align: center;
+	}
+
+	.rules .rules-holder {
+		max-width: 100%;
+	    margin-left: 15px;
+	    margin-right: 15px;
+	}
+}
