--- a/css/main.css
+++ b/css/main.css
@@ -126,6 +126,7 @@ hr {
 
 .content-top img {
 	padding-top: 30px;
+	max-width: 100%;
 }
 
 .content-middle {
@@ -202,6 +203,14 @@ hr {
 		font-size: 16px;
 	}
 
+	.header-top a {
+		font-size: 40px;
+	}
+
+	.header-top img {
+		max-height: 60px;
+	}
+
 	.content-top {
 	    max-width: 100%;
 	    margin-left: 15px;
@@ -211,9 +220,35 @@ hr {
 	    text-align: center;
 	}
 
+	.content-top img {
+		padding-top: 15px;
+	}
+
 	.rules .rules-holder {
 		max-width: 100%;
 	    margin-left: 15px;
 	    margin-right: 15px;
+	}
+}
+
+@media (max-width: 480px) {
+	h1 {
+		font-size: 36px;
+	}
+
+	h3 {
+		font-size: 28px;
+	}
+
+	h4 {
+		font-size: 22px;
+	}
+
+	.header-top a {
+		font-size: 30px;
+	}
+
+	.header-top img {
+		max-height: 40px;
 	}
 }
