--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,7 @@ h4 {
 	font-size: 32px;
 }
 
-p {
+p, a {
 	margin: 0;
 	font-size: 18px;
 	color: #222;
@@ -29,12 +29,6 @@ p {
 }
 
 a {
-	margin: 0;
-	font-size: 18px;
-	color: #222;
-	font-weight: 400;
-	font-family: 'Spectral', serif;
-	line-height: 1.2;
 	text-decoration: none;
 }
 
